# iam-zero

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
iam_zero/: __init__.py  cli.py
iam_zero/agent/: analyst.py
iam_zero/aws/: cloudtrail.py  iam_analyzer.py  policy_generator.py
iam_zero/gcp/: audit_logs.py  iam_analyzer.py  policy_generator.py
iam_zero/shared/: config.py  output.py  pr.py  report.py
tests/: test_aws_analyzer.py  test_aws_policy_generator.py  test_cloudtrail.py  test_gcp_analyzer.py  test_gcp_policy_generator.py  test_output_modes.py  test_report.py
