[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iam-zero"
version = "0.1.0"
description = "Detect overpermissive IAM roles on AWS + GCP and auto-open PRs with least-privilege policies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Supraj Maripeddi", email = "supraj.maripeddi@gmail.com" }]
keywords = ["iam", "aws", "gcp", "security", "least-privilege"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.1",
    "anthropic>=0.40",
    "boto3>=1.34",
    "google-cloud-logging>=3.10",
    "google-cloud-iam>=2.15",
    "google-cloud-resource-manager>=1.12",
    "PyGithub>=2.3",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[cloudtrail,iam]>=5.0",
    "ruff>=0.4",
]

[project.scripts]
iam-zero = "iam_zero.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["iam_zero"]

[tool.ruff]
line-length = 100
target-version = "py311"
